karnc/tests/fixtures/positive/98_cross_context_call_with_alias/src/commerce/orders.karn
context commerce.orders

consumes commerce.payment as Pay

service placeOrder {
  on call(total: Int) -> Effect[Result[Int, Int]] {
    let _ <- Pay.authorise(total)
    Effect.pure(Ok(total))
  }
}
