karnc/tests/fixtures/negative/75_call_not_consumed/src/commerce/orders.karn
context commerce.orders

service placeOrder {
  on call(total: Int) -> Effect[Result[Int, Int]] {
    let _ <- commerce.payment.authorise(total)
    Effect.pure(Ok(total))
  }
}
